# just-one

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  start-pb.sh  tailwind.config.js  tsconfig.node.json  vite.config.ts  vitest.config.ts
pocketbase/pb_migrations/: 1_init_collections.js  2_add_why_to_tasks.js  3_add_task_templates.js  4_add_ai_analyzed_at.js  5_add_time_tracking.js  6_add_user_isolation.js
src/: App.tsx  db.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AuthPage.tsx  CarryOverBanner.tsx  Dashboard.tsx  EveningReview.tsx  FocusBoard.tsx  GuidedCapture.tsx  InboxPanel.tsx  MilestonePanel.tsx  Modal.tsx  MorningRitual.tsx  Navbar.tsx  Sidebar.tsx  StreakAndScore.tsx  TaskTemplates.tsx  VisionPanel.tsx  WeeklyReport.tsx
src/components/ui/: badge.tsx  button.tsx  dialog.tsx  input.tsx  select.tsx  slider.tsx  textarea.tsx
src/hooks/: usePB.ts
src/services/: gemini.ts  pb.ts  streak.ts
src/test/: core.test.ts
