[package]
name = "just-one"
version = "0.1.0"
description = "JustOne AI - Personal Priority Alignment Tool"
authors = ["JustOne AI Contributors"]
license = "MIT"
repository = "https://github.com/qijinhaocode/just-one"
edition = "2021"
rust-version = "1.77"

[lib]
name = "just_one_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "just-one"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api",
  "tray-icon",
  "image-ico",
  "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
